--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-How to circularly pipe lock manager with database via stdin
+How to circularly pipe lock manager with database via stdin (must be performed inside "lm" folder)
 
-    ./lm 0 < ../buffer.lm.db | ../db/TPC-C 0 > ../buffer.lm.db
+	./lm ../test.conf 0 < ../buffer.lm.db | ../db/TPC-C ../test.conf 0 > ../buffer.lm.db
